--- a/index.html
+++ b/index.html
@@ -170,10 +170,9 @@
             <h1>Chirag Jethva</h1>
             <h2>FOUNDER & CEO</h2>
             <p>
-                Hi, my name is <b>Chirag Jethva</b>. I am from <b>Rajkot, Gujarat</b>.<br>
-                I am pursuing my <b>MCA</b> from <b>Marwadi University</b>.<br>
-                I am passionate about <b>software development</b>, coding, 
-                and building impactful digital solutions.
+               I believe technology is the future, and I want to be a part of shaping it.
+From writing my first line of code to starting my own software company CodeNova, the journey has been driven by passion, dedication, and a dream to create something meaningful.
+As Founder & CEO, my goal is simple – to build software that makes life easier and businesses stronger.
             </p>
         </div>
     </section>
@@ -218,4 +217,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
