Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     </section>
 
     <section id="services" class="section">
+        <div class="particles"></div>
         <h2>Our Services</h2>
         <div class="services-grid">
             <div class="service-card">
@@ -219,3 +220,4 @@ As Founder & CEO, my goal is simple – to build software that makes life easier
 </body>
 
 </html>
+
